ceres-client/src/components/Statistics/Statistics.css
.questionMenu {
  background-color: white;
  height: 100%;
  text-align: left;
  padding: 10px;
  font-weight: bold;
}

.question-list {
  text-align: left;
}

.plot {
  height: 100%;
  width: 100%
}

.radio-button {
  margin-right: 10px;
}

.dashboard-title {
  font-size: 2em;
  font-weight: bold;
}

.statistics-dashboard-container {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: stretch;
  height: 60vh;
}

.statistics-card {
  box-shadow: 0 4px 8px 0 rgba(207, 207, 207, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.right-container {
  width: 80%;
}

.outer-container {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  height: 85vh;
}

.date-filter {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.date-from {
  display: flex;
  align-items: center;
}

.date-to {
  display: flex;
  align-items: center;
}

.filter-input {
  align-items: center;
  background-color: white;
  border-color: #d6d6d6;
  border-radius: 5px;
  border-width: 1px;
  box-shadow: 0 4px 8px 0 rgba(110, 100, 100, 0.2);
  color: rgb(0, 0, 0);
  display: inline-block;
  font-family: Arial;
  outline: none;
  margin: 4px;
  padding: 0.5em 3.5em 0.5em 1em;
}

.filter-label {
  margin-right: 5px;
}

.button {
  margin: 5px;
}

